--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,66 +3,183 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
-    --radius: 0.5rem
-  }
-  .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%
-  }
+    :root {
+        --background: rgb(252, 252, 252);
+        --foreground: rgb(0, 0, 0);
+        --card: rgb(255, 255, 255);
+        --card-foreground: rgb(0, 0, 0);
+        --popover: rgb(252, 252, 252);
+        --popover-foreground: rgb(0, 0, 0);
+        --primary: rgb(0, 0, 0);
+        --primary-foreground: rgb(255, 255, 255);
+        --secondary: rgb(235, 235, 235);
+        --secondary-foreground: rgb(0, 0, 0);
+        --muted: rgb(245, 245, 245);
+        --muted-foreground: rgb(82, 82, 82);
+        --accent: rgb(235, 235, 235);
+        --accent-foreground: rgb(0, 0, 0);
+        --destructive: rgb(229, 75, 79);
+        --destructive-foreground: rgb(255, 255, 255);
+        --border: rgb(228, 228, 228);
+        --input: rgb(235, 235, 235);
+        --ring: rgb(0, 0, 0);
+        --chart-1: rgb(255, 174, 4);
+        --chart-2: rgb(45, 98, 239);
+        --chart-3: rgb(164, 164, 164);
+        --chart-4: rgb(228, 228, 228);
+        --chart-5: rgb(116, 116, 116);
+        --sidebar: rgb(252, 252, 252);
+        --sidebar-foreground: rgb(0, 0, 0);
+        --sidebar-primary: rgb(0, 0, 0);
+        --sidebar-primary-foreground: rgb(255, 255, 255);
+        --sidebar-accent: rgb(235, 235, 235);
+        --sidebar-accent-foreground: rgb(0, 0, 0);
+        --sidebar-border: rgb(235, 235, 235);
+        --sidebar-ring: rgb(0, 0, 0);
+        --font-sans: Geist, sans-serif;
+        --font-serif: Georgia, serif;
+        --font-mono: Geist Mono, monospace;
+        --radius: 0.5rem;
+        --shadow-x: 0px;
+        --shadow-y: 1px;
+        --shadow-blur: 2px;
+        --shadow-spread: 0px;
+        --shadow-opacity: 0.18;
+        --shadow-color: hsl(0 0% 0%);
+        --shadow-2xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
+        --shadow-xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
+        --shadow-sm: 0px 1px 2px 0px hsl(0 0% 0% / 0.18),
+            0px 1px 2px -1px hsl(0 0% 0% / 0.18);
+        --shadow: 0px 1px 2px 0px hsl(0 0% 0% / 0.18),
+            0px 1px 2px -1px hsl(0 0% 0% / 0.18);
+        --shadow-md: 0px 1px 2px 0px hsl(0 0% 0% / 0.18),
+            0px 2px 4px -1px hsl(0 0% 0% / 0.18);
+        --shadow-lg: 0px 1px 2px 0px hsl(0 0% 0% / 0.18),
+            0px 4px 6px -1px hsl(0 0% 0% / 0.18);
+        --shadow-xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.18),
+            0px 8px 10px -1px hsl(0 0% 0% / 0.18);
+        --shadow-2xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.45);
+        --tracking-normal: 0em;
+        --spacing: 0.25rem;
+    }
+
+    .dark {
+        --background: rgb(0, 0, 0);
+        --foreground: rgb(255, 255, 255);
+        --card: rgb(9, 9, 9);
+        --card-foreground: rgb(255, 255, 255);
+        --popover: rgb(18, 18, 18);
+        --popover-foreground: rgb(255, 255, 255);
+        --primary: rgb(255, 255, 255);
+        --primary-foreground: rgb(0, 0, 0);
+        --secondary: rgb(34, 34, 34);
+        --secondary-foreground: rgb(255, 255, 255);
+        --muted: rgb(29, 29, 29);
+        --muted-foreground: rgb(164, 164, 164);
+        --accent: rgb(51, 51, 51);
+        --accent-foreground: rgb(255, 255, 255);
+        --destructive: rgb(255, 91, 91);
+        --destructive-foreground: rgb(0, 0, 0);
+        --border: rgb(36, 36, 36);
+        --input: rgb(51, 51, 51);
+        --ring: rgb(164, 164, 164);
+        --chart-1: rgb(255, 174, 4);
+        --chart-2: rgb(38, 113, 244);
+        --chart-3: rgb(116, 116, 116);
+        --chart-4: rgb(82, 82, 82);
+        --chart-5: rgb(228, 228, 228);
+        --sidebar: rgb(18, 18, 18);
+        --sidebar-foreground: rgb(255, 255, 255);
+        --sidebar-primary: rgb(255, 255, 255);
+        --sidebar-primary-foreground: rgb(0, 0, 0);
+        --sidebar-accent: rgb(51, 51, 51);
+        --sidebar-accent-foreground: rgb(255, 255, 255);
+        --sidebar-border: rgb(51, 51, 51);
+        --sidebar-ring: rgb(164, 164, 164);
+        --font-sans: Geist, sans-serif;
+        --font-serif: Georgia, serif;
+        --font-mono: Geist Mono, monospace;
+        --radius: 0.5rem;
+        --shadow-x: 0px;
+        --shadow-y: 1px;
+        --shadow-blur: 2px;
+        --shadow-spread: 0px;
+        --shadow-opacity: 0.18;
+        --shadow-color: hsl(0 0% 0%);
+        --shadow-2xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
+        --shadow-xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
+        --shadow-sm: 0px 1px 2px 0px hsl(0 0% 0% / 0.18),
+            0px 1px 2px -1px hsl(0 0% 0% / 0.18);
+        --shadow: 0px 1px 2px 0px hsl(0 0% 0% / 0.18),
+            0px 1px 2px -1px hsl(0 0% 0% / 0.18);
+        --shadow-md: 0px 1px 2px 0px hsl(0 0% 0% / 0.18),
+            0px 2px 4px -1px hsl(0 0% 0% / 0.18);
+        --shadow-lg: 0px 1px 2px 0px hsl(0 0% 0% / 0.18),
+            0px 4px 6px -1px hsl(0 0% 0% / 0.18);
+        --shadow-xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.18),
+            0px 8px 10px -1px hsl(0 0% 0% / 0.18);
+        --shadow-2xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.45);
+    }
+
+    @theme inline {
+        --color-background: var(--background);
+        --color-foreground: var(--foreground);
+        --color-card: var(--card);
+        --color-card-foreground: var(--card-foreground);
+        --color-popover: var(--popover);
+        --color-popover-foreground: var(--popover-foreground);
+        --color-primary: var(--primary);
+        --color-primary-foreground: var(--primary-foreground);
+        --color-secondary: var(--secondary);
+        --color-secondary-foreground: var(--secondary-foreground);
+        --color-muted: var(--muted);
+        --color-muted-foreground: var(--muted-foreground);
+        --color-accent: var(--accent);
+        --color-accent-foreground: var(--accent-foreground);
+        --color-destructive: var(--destructive);
+        --color-destructive-foreground: var(--destructive-foreground);
+        --color-border: var(--border);
+        --color-input: var(--input);
+        --color-ring: var(--ring);
+        --color-chart-1: var(--chart-1);
+        --color-chart-2: var(--chart-2);
+        --color-chart-3: var(--chart-3);
+        --color-chart-4: var(--chart-4);
+        --color-chart-5: var(--chart-5);
+        --color-sidebar: var(--sidebar);
+        --color-sidebar-foreground: var(--sidebar-foreground);
+        --color-sidebar-primary: var(--sidebar-primary);
+        --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+        --color-sidebar-accent: var(--sidebar-accent);
+        --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+        --color-sidebar-border: var(--sidebar-border);
+        --color-sidebar-ring: var(--sidebar-ring);
+
+        --font-sans: var(--font-sans);
+        --font-mono: var(--font-mono);
+        --font-serif: var(--font-serif);
+
+        --radius-sm: calc(var(--radius) - 4px);
+        --radius-md: calc(var(--radius) - 2px);
+        --radius-lg: var(--radius);
+        --radius-xl: calc(var(--radius) + 4px);
+
+        --shadow-2xs: var(--shadow-2xs);
+        --shadow-xs: var(--shadow-xs);
+        --shadow-sm: var(--shadow-sm);
+        --shadow: var(--shadow);
+        --shadow-md: var(--shadow-md);
+        --shadow-lg: var(--shadow-lg);
+        --shadow-xl: var(--shadow-xl);
+        --shadow-2xl: var(--shadow-2xl);
+    }
 }
 
 @layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
+    * {
+        @apply border-border;
+    }
+    body {
+        @apply bg-background text-foreground;
+    }
 }
