--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,6 +4,357 @@
 
 @layer base {
     :root {
+        --background: rgb(255, 255, 255);
+        --foreground: rgb(15, 20, 25);
+        --card: rgb(247, 248, 248);
+        --card-foreground: rgb(15, 20, 25);
+        --popover: rgb(255, 255, 255);
+        --popover-foreground: rgb(15, 20, 25);
+        --primary: rgb(30, 157, 241);
+        --primary-foreground: rgb(255, 255, 255);
+        --secondary: rgb(15, 20, 25);
+        --secondary-foreground: rgb(255, 255, 255);
+        --muted: rgb(229, 229, 230);
+        --muted-foreground: rgb(15, 20, 25);
+        --accent: rgb(227, 236, 246);
+        --accent-foreground: rgb(30, 157, 241);
+        --destructive: rgb(244, 33, 46);
+        --destructive-foreground: rgb(255, 255, 255);
+        --border: rgb(225, 234, 239);
+        --input: rgb(247, 249, 250);
+        --ring: rgb(29, 161, 242);
+        --chart-1: rgb(30, 157, 241);
+        --chart-2: rgb(0, 184, 122);
+        --chart-3: rgb(247, 185, 40);
+        --chart-4: rgb(23, 191, 99);
+        --chart-5: rgb(224, 36, 94);
+        --sidebar: rgb(247, 248, 248);
+        --sidebar-foreground: rgb(15, 20, 25);
+        --sidebar-primary: rgb(30, 157, 241);
+        --sidebar-primary-foreground: rgb(255, 255, 255);
+        --sidebar-accent: rgb(227, 236, 246);
+        --sidebar-accent-foreground: rgb(30, 157, 241);
+        --sidebar-border: rgb(225, 232, 237);
+        --sidebar-ring: rgb(29, 161, 242);
+        --font-sans: Open Sans, sans-serif;
+        --font-serif: Georgia, serif;
+        --font-mono: Menlo, monospace;
+        --radius: 1.3rem;
+        --shadow-x: 0px;
+        --shadow-y: 2px;
+        --shadow-blur: 0px;
+        --shadow-spread: 0px;
+        --shadow-opacity: 0;
+        --shadow-color: rgba(29, 161, 242, 0.15);
+        --shadow-2xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0);
+        --shadow-xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0);
+        --shadow-sm: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+            0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+        --shadow: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+            0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+        --shadow-md: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+            0px 2px 4px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+        --shadow-lg: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+            0px 4px 6px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+        --shadow-xl: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+            0px 8px 10px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+        --shadow-2xl: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0);
+        --tracking-normal: 0em;
+        --spacing: 0.25rem;
+    }
+
+    .dark {
+        --background: rgb(0, 0, 0);
+        --foreground: rgb(231, 233, 234);
+        --card: rgb(23, 24, 28);
+        --card-foreground: rgb(217, 217, 217);
+        --popover: rgb(0, 0, 0);
+        --popover-foreground: rgb(231, 233, 234);
+        --primary: rgb(28, 156, 240);
+        --primary-foreground: rgb(255, 255, 255);
+        --secondary: rgb(240, 243, 244);
+        --secondary-foreground: rgb(15, 20, 25);
+        --muted: rgb(24, 24, 24);
+        --muted-foreground: rgb(114, 118, 122);
+        --accent: rgb(6, 22, 34);
+        --accent-foreground: rgb(28, 156, 240);
+        --destructive: rgb(244, 33, 46);
+        --destructive-foreground: rgb(255, 255, 255);
+        --border: rgb(36, 38, 40);
+        --input: rgb(34, 48, 60);
+        --ring: rgb(29, 161, 242);
+        --chart-1: rgb(30, 157, 241);
+        --chart-2: rgb(0, 184, 122);
+        --chart-3: rgb(247, 185, 40);
+        --chart-4: rgb(23, 191, 99);
+        --chart-5: rgb(224, 36, 94);
+        --sidebar: rgb(23, 24, 28);
+        --sidebar-foreground: rgb(217, 217, 217);
+        --sidebar-primary: rgb(29, 161, 242);
+        --sidebar-primary-foreground: rgb(255, 255, 255);
+        --sidebar-accent: rgb(6, 22, 34);
+        --sidebar-accent-foreground: rgb(28, 156, 240);
+        --sidebar-border: rgb(56, 68, 77);
+        --sidebar-ring: rgb(29, 161, 242);
+        --font-sans: Open Sans, sans-serif;
+        --font-serif: Georgia, serif;
+        --font-mono: Menlo, monospace;
+        --radius: 1.3rem;
+        --shadow-x: 0px;
+        --shadow-y: 2px;
+        --shadow-blur: 0px;
+        --shadow-spread: 0px;
+        --shadow-opacity: 0;
+        --shadow-color: rgba(29, 161, 242, 0.25);
+        --shadow-2xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0);
+        --shadow-xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0);
+        --shadow-sm: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+            0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+        --shadow: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+            0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+        --shadow-md: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+            0px 2px 4px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+        --shadow-lg: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+            0px 4px 6px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+        --shadow-xl: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+            0px 8px 10px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+        --shadow-2xl: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0);
+    }
+
+    @theme inline {
+        --color-background: var(--background);
+        --color-foreground: var(--foreground);
+        --color-card: var(--card);
+        --color-card-foreground: var(--card-foreground);
+        --color-popover: var(--popover);
+        --color-popover-foreground: var(--popover-foreground);
+        --color-primary: var(--primary);
+        --color-primary-foreground: var(--primary-foreground);
+        --color-secondary: var(--secondary);
+        --color-secondary-foreground: var(--secondary-foreground);
+        --color-muted: var(--muted);
+        --color-muted-foreground: var(--muted-foreground);
+        --color-accent: var(--accent);
+        --color-accent-foreground: var(--accent-foreground);
+        --color-destructive: var(--destructive);
+        --color-destructive-foreground: var(--destructive-foreground);
+        --color-border: var(--border);
+        --color-input: var(--input);
+        --color-ring: var(--ring);
+        --color-chart-1: var(--chart-1);
+        --color-chart-2: var(--chart-2);
+        --color-chart-3: var(--chart-3);
+        --color-chart-4: var(--chart-4);
+        --color-chart-5: var(--chart-5);
+        --color-sidebar: var(--sidebar);
+        --color-sidebar-foreground: var(--sidebar-foreground);
+        --color-sidebar-primary: var(--sidebar-primary);
+        --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+        --color-sidebar-accent: var(--sidebar-accent);
+        --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+        --color-sidebar-border: var(--sidebar-border);
+        --color-sidebar-ring: var(--sidebar-ring);
+
+        --font-sans: var(--font-sans);
+        --font-mono: var(--font-mono);
+        --font-serif: var(--font-serif);
+
+        --radius-sm: calc(var(--radius) - 4px);
+        --radius-md: calc(var(--radius) - 2px);
+        --radius-lg: var(--radius);
+        --radius-xl: calc(var(--radius) + 4px);
+
+        --shadow-2xs: var(--shadow-2xs);
+        --shadow-xs: var(--shadow-xs);
+        --shadow-sm: var(--shadow-sm);
+        --shadow: var(--shadow);
+        --shadow-md: var(--shadow-md);
+        --shadow-lg: var(--shadow-lg);
+        --shadow-xl: var(--shadow-xl);
+        --shadow-2xl: var(--shadow-2xl);
+    }
+    :root {
+        --background: rgb(247, 249, 243);
+        --foreground: rgb(0, 0, 0);
+        --card: rgb(255, 255, 255);
+        --card-foreground: rgb(0, 0, 0);
+        --popover: rgb(255, 255, 255);
+        --popover-foreground: rgb(0, 0, 0);
+        --primary: rgb(79, 70, 229);
+        --primary-foreground: rgb(255, 255, 255);
+        --secondary: rgb(20, 184, 166);
+        --secondary-foreground: rgb(255, 255, 255);
+        --muted: rgb(240, 240, 240);
+        --muted-foreground: rgb(51, 51, 51);
+        --accent: rgb(245, 158, 11);
+        --accent-foreground: rgb(0, 0, 0);
+        --destructive: rgb(239, 68, 68);
+        --destructive-foreground: rgb(255, 255, 255);
+        --border: rgb(0, 0, 0);
+        --input: rgb(115, 115, 115);
+        --ring: rgb(165, 180, 252);
+        --chart-1: rgb(79, 70, 229);
+        --chart-2: rgb(20, 184, 166);
+        --chart-3: rgb(245, 158, 11);
+        --chart-4: rgb(236, 72, 153);
+        --chart-5: rgb(34, 197, 94);
+        --sidebar: rgb(247, 249, 243);
+        --sidebar-foreground: rgb(0, 0, 0);
+        --sidebar-primary: rgb(79, 70, 229);
+        --sidebar-primary-foreground: rgb(255, 255, 255);
+        --sidebar-accent: rgb(245, 158, 11);
+        --sidebar-accent-foreground: rgb(0, 0, 0);
+        --sidebar-border: rgb(0, 0, 0);
+        --sidebar-ring: rgb(165, 180, 252);
+        --font-sans: DM Sans, sans-serif;
+        --font-serif: DM Sans, sans-serif;
+        --font-mono: Space Mono, monospace;
+        --radius: 1rem;
+        --shadow-x: 0px;
+        --shadow-y: 0px;
+        --shadow-blur: 0px;
+        --shadow-spread: 0px;
+        --shadow-opacity: 0.05;
+        --shadow-color: #1a1a1a;
+        --shadow-2xs: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0.03);
+        --shadow-xs: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0.03);
+        --shadow-sm: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0.05),
+            0px 1px 2px -1px hsl(0 0% 10.1961% / 0.05);
+        --shadow: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0.05),
+            0px 1px 2px -1px hsl(0 0% 10.1961% / 0.05);
+        --shadow-md: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0.05),
+            0px 2px 4px -1px hsl(0 0% 10.1961% / 0.05);
+        --shadow-lg: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0.05),
+            0px 4px 6px -1px hsl(0 0% 10.1961% / 0.05);
+        --shadow-xl: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0.05),
+            0px 8px 10px -1px hsl(0 0% 10.1961% / 0.05);
+        --shadow-2xl: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0.13);
+        --tracking-normal: normal;
+        --spacing: 0.25rem;
+    }
+
+    .dark {
+        --background: rgb(0, 0, 0);
+        --foreground: rgb(255, 255, 255);
+        --card: rgb(26, 33, 43);
+        --card-foreground: rgb(255, 255, 255);
+        --popover: rgb(26, 33, 43);
+        --popover-foreground: rgb(255, 255, 255);
+        --primary: rgb(129, 140, 248);
+        --primary-foreground: rgb(0, 0, 0);
+        --secondary: rgb(45, 212, 191);
+        --secondary-foreground: rgb(0, 0, 0);
+        --muted: rgb(51, 51, 51);
+        --muted-foreground: rgb(204, 204, 204);
+        --accent: rgb(252, 211, 77);
+        --accent-foreground: rgb(0, 0, 0);
+        --destructive: rgb(248, 113, 113);
+        --destructive-foreground: rgb(0, 0, 0);
+        --border: rgb(84, 84, 84);
+        --input: rgb(255, 255, 255);
+        --ring: rgb(129, 140, 248);
+        --chart-1: rgb(129, 140, 248);
+        --chart-2: rgb(45, 212, 191);
+        --chart-3: rgb(252, 211, 77);
+        --chart-4: rgb(244, 114, 182);
+        --chart-5: rgb(74, 222, 128);
+        --sidebar: rgb(0, 0, 0);
+        --sidebar-foreground: rgb(255, 255, 255);
+        --sidebar-primary: rgb(129, 140, 248);
+        --sidebar-primary-foreground: rgb(0, 0, 0);
+        --sidebar-accent: rgb(252, 211, 77);
+        --sidebar-accent-foreground: rgb(0, 0, 0);
+        --sidebar-border: rgb(255, 255, 255);
+        --sidebar-ring: rgb(129, 140, 248);
+        --font-sans: DM Sans, sans-serif;
+        --font-serif: DM Sans, sans-serif;
+        --font-mono: Space Mono, monospace;
+        --radius: 1rem;
+        --shadow-x: 0px;
+        --shadow-y: 0px;
+        --shadow-blur: 0px;
+        --shadow-spread: 0px;
+        --shadow-opacity: 0.05;
+        --shadow-color: #1a1a1a;
+        --shadow-2xs: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0.03);
+        --shadow-xs: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0.03);
+        --shadow-sm: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0.05),
+            0px 1px 2px -1px hsl(0 0% 10.1961% / 0.05);
+        --shadow: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0.05),
+            0px 1px 2px -1px hsl(0 0% 10.1961% / 0.05);
+        --shadow-md: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0.05),
+            0px 2px 4px -1px hsl(0 0% 10.1961% / 0.05);
+        --shadow-lg: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0.05),
+            0px 4px 6px -1px hsl(0 0% 10.1961% / 0.05);
+        --shadow-xl: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0.05),
+            0px 8px 10px -1px hsl(0 0% 10.1961% / 0.05);
+        --shadow-2xl: 0px 0px 0px 0px hsl(0 0% 10.1961% / 0.13);
+    }
+
+    @theme inline {
+        --color-background: var(--background);
+        --color-foreground: var(--foreground);
+        --color-card: var(--card);
+        --color-card-foreground: var(--card-foreground);
+        --color-popover: var(--popover);
+        --color-popover-foreground: var(--popover-foreground);
+        --color-primary: var(--primary);
+        --color-primary-foreground: var(--primary-foreground);
+        --color-secondary: var(--secondary);
+        --color-secondary-foreground: var(--secondary-foreground);
+        --color-muted: var(--muted);
+        --color-muted-foreground: var(--muted-foreground);
+        --color-accent: var(--accent);
+        --color-accent-foreground: var(--accent-foreground);
+        --color-destructive: var(--destructive);
+        --color-destructive-foreground: var(--destructive-foreground);
+        --color-border: var(--border);
+        --color-input: var(--input);
+        --color-ring: var(--ring);
+        --color-chart-1: var(--chart-1);
+        --color-chart-2: var(--chart-2);
+        --color-chart-3: var(--chart-3);
+        --color-chart-4: var(--chart-4);
+        --color-chart-5: var(--chart-5);
+        --color-sidebar: var(--sidebar);
+        --color-sidebar-foreground: var(--sidebar-foreground);
+        --color-sidebar-primary: var(--sidebar-primary);
+        --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+        --color-sidebar-accent: var(--sidebar-accent);
+        --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+        --color-sidebar-border: var(--sidebar-border);
+        --color-sidebar-ring: var(--sidebar-ring);
+
+        --font-sans: var(--font-sans);
+        --font-mono: var(--font-mono);
+        --font-serif: var(--font-serif);
+
+        --radius-sm: calc(var(--radius) - 4px);
+        --radius-md: calc(var(--radius) - 2px);
+        --radius-lg: var(--radius);
+        --radius-xl: calc(var(--radius) + 4px);
+
+        --shadow-2xs: var(--shadow-2xs);
+        --shadow-xs: var(--shadow-xs);
+        --shadow-sm: var(--shadow-sm);
+        --shadow: var(--shadow);
+        --shadow-md: var(--shadow-md);
+        --shadow-lg: var(--shadow-lg);
+        --shadow-xl: var(--shadow-xl);
+        --shadow-2xl: var(--shadow-2xl);
+
+        --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+        --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+        --tracking-normal: var(--tracking-normal);
+        --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+        --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+        --tracking-widest: calc(var(--tracking-normal) + 0.1em);
+    }
+
+    body {
+        letter-spacing: var(--tracking-normal);
+    }
+    :root {
         --background: rgb(252, 252, 252);
         --foreground: rgb(0, 0, 0);
         --card: rgb(255, 255, 255);
